# refact-lsp

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Dockerfile  INTEGRATIONS.md  README.md  build.rs  flake.nix
.github/workflows/: build.yml  release.yml
bring_your_own_key/: anthropic.yaml
docker/: fix_sqlite_vec.h  lsp-debug.Dockerfile
examples/: chat_with_at_command.py  http_chat.sh  http_commit_message.sh  http_subchat.sh  lsp_completion.py  luke1.py  note3.py  note4.py  toolbox_rewrite.py
python_binding_and_cmdline/refact/: __init__.py  chat_client.py  chat_with_at_command.py  cli_main.py  (+2 more)
refact/: chat_client.py
refact_binary/: Cargo.toml
refact_binary/src/: main.rs
refact_lsp_internals/: Cargo.toml
src/: autonomy.rs  background_tasks.rs  blocklist.rs  cached_tokenizers.rs  call_validation.rs  caps.rs  chore_db.rs  chore_schema.rs  command_sessions.rs  completion_cache.rs  custom_error.rs  diffs.rs  documentation_files.rs  fetch_embedding.rs  file_filter.rs  files_correction.rs  files_in_jsonl.rs  files_in_workspace.rs  forward_to_anthropic_endpoint.rs  forward_to_hf_endpoint.rs  forward_to_openai_endpoint.rs  fuzzy_search.rs  git.rs  global_context.rs  http.rs  http_server.rs  knowledge.rs  known_models.rs  lsp.rs  main.rs  privacy.rs  privacy_compiled_in.rs  receive_workspace_changes.rs  restream.rs  scratchpad_abstract.rs  subchat.rs  telemetry_snippets.rs  vecdb_search.rs  vectordb.rs
swe/: eval.py  solve.py  step.py  step2.py  swe_step2_eval.py
tests/: code_completion_prompt_with_rag.py  lance_viewer.py  test10_tools_validate.py  test11_patch.py  test13_choredb.py  test13_vision.py  test14_choredb_observe.py  test15_memdb_subevents.py  test6_tool_not_tool.py  test7_memories.py  test8_post_processing.py  test_diff_handlers.py  test_diffs.rs  test_edge_cases.py  test_vecdb.py
webgui/: chat.css  chat.html  chat.js  index.html
(+284 files in other folders)
