[package]
name = "refact-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "stream"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
reqwest-eventsource = "0.4.0"
url = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
tower-lsp = "0.20"
tower-http = { version = "0.4.0" }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokenizers = "0.13"
ropey = "1.6"
home = "0.5"
structopt = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3.5"
chrono = "0.4.31"
regex = "1.9.5"
async-trait = "0.1.73"
similar = "2.3.0"
axum = "0.6.20"

lance = "0.8.17"
vectordb = "0.3.9"
arrow = "47.0.0"
arrow-array = "47.0.0"
arrow-schema= "47.0.0"
async_once= "0.2.6"
tempfile = "3.8.1"
md5 = "0.7"
mockito = "0.28.0"
time = "0.3.30"
notify = "6.1.1"
walkdir = "2.3"
log = "0.4.20"
