[profile.release]
strip = true
opt-level = "z"
lto = true

[package]
name = "refact-lsp"
version = "0.9.2"
edition = "2021"

[build-dependencies]
shadow-rs = "0.25.0"

[dependencies]
refact_lsp_internals = { path = "../refact_lsp_internals" }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
backtrace = "0.3.71"
home = "0.5"
rayon = "1.8.0"
